# monitoramento_de_veiculos

./: app.py  pyproject.toml  teste_app.py
backend/: app.py  veiculos.db
backend/controllers/: base_plate_recognizer.py  openalpr_recognizer.py  plate_recognizer.py
backend/migrations/versions/: bddda9eb0f0b_initial.py
backend/models/: database_model.py
backend/tests/: test.placas.py
